batch-analysis-direct-20260112-170823.log
/Users/benknight/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
scripts/batch-analyze-transcripts-direct.ts(98,37): error TS2339: Property 'impact_assessment' does not exist on type 'TranscriptAnalysisResult'.
scripts/batch-analyze-transcripts-direct.ts(99,34): error TS2339: Property 'cultural_flags' does not exist on type 'TranscriptAnalysisResult'.
scripts/batch-analyze-transcripts-direct.ts(101,30): error TS2339: Property 'accuracy' does not exist on type 'TranscriptAnalysisResult'.
scripts/batch-analyze-transcripts-direct.ts(102,32): error TS2339: Property 'confidence' does not exist on type 'TranscriptAnalysisResult'.

    at createTSError (/Users/benknight/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/benknight/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/benknight/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/benknight/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/benknight/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1839:10
    at Object.require.extensions.<computed> [as .ts] (/Users/benknight/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2339, 2339, 2339, 2339 ]
}
